# src/main/resources/openapi.yml
@@ -268,6 +268,32 @@ paths:
       responses:
         '200':
           description: No response data in case successful request
+  /games/{id}/history:
+    get:
+      tags:
+        - game
+      description: Game history
+      operationId: history
+      parameters:
+        - in: header
+          name: X-Player
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: id
+          description: Game id
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Returns all game history
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/History'
   /games/{id}/leave:
     post:
       tags:
@@ -372,7 +398,16 @@ components:
           $ref: '#/components/schemas/Action'
         value:
           type: string
-#  ---- Enums section  ----------------------------------------            
+    History:
+      type: object
+      properties:
+        turns:
+          type: array
+          items:
+            type: array
+            items:
+              $ref: '#/components/schemas/PlayerAction'
+#  ---- Enums section  ----------------------------------------
     QuestionAnswer:
       type: string
       enum:
